Fixed issues #29 and #30. Other slight alignment fixes in the settings modals.

--- a/css/settings_modal.less
+++ b/css/settings_modal.less
@@ -59,7 +59,7 @@
 			display: inline-block;
 			float: right;
 			vertical-align: top;
-			height: 511px;
+			height: 478px;
 			position: relative;
 
 			#options {
