--- a/css/table.less
+++ b/css/table.less
@@ -71,7 +71,7 @@
 
 	#filter-container {
 		background-color: white;
-		border: 1px solid @grey-drk;
+		border: 1px solid @grey-lgt;
 		padding: 10px;
 		font-size: 14px;
 
